# butterfly

./: .buildinfo  examples.html  genindex.html  hierarchical-matrices.html  implementation.html  index.html  installation.html  introduction.html  meson.build  quickstart.html  search.html  searchindex.js  todo.html  wrappers.html
.doctrees/: environment.pickle
examples/: README.md  meson.build
examples/covariance/: Project.toml  README.md  cheb-conv-check.jl  cheb_cov.c  covariance_sphere.jl  exact_cov_test.sh  fast_cov_test.sh  lbo_cov.c  plot_exact_cov_test.jl  plot_fast_cov_test.jl  plot_sample.jl  sphere_cov.jl  utils.jl
examples/fiedler_tree/: meson.build  plot_fiedler_node.py  plot_fiedler_perm.py  test_fiedler_tree.c
examples/lbo/: bf_lbo.c
examples/lbo_MFEM/: README.md  convert_to_uint64_bin.py  lbo_MFEM.cpp  make_plots.py  make_sphere_data.sh  meson.build
examples/radiosity/: radiosity.c  radiosity.py
include/bf/: chol.h  chol_csr_real.h  fac.h  fac_span.h  fac_streamer.h  lbo.h  logging.h  mat_csr_real.h  mat_dense_complex.h  perm.h  trimesh.h  util.h  vec_real.h  vectors.h
src/: cheb.c  chol.c  chol_csr_real.c  fac_helm2.c  fac_streamer.c  fiedler_tree_node.c  lbo.c  linalg.c  logging.c  lu_csr_real.c  mat_block_diag.c  mat_csr_real.c  mat_dense_complex.c  octree.get_nearest_neighbors.c  perm.c  trimesh.c  trimesh.get_level_set_submesh.c  util.c  vec_real.c  vectors.c
wrappers/python/: butterfly.pyx  mat.pxd  mat_csr_real.pxd  trimesh.pxd  types.pxd  vec.pxd  vec_real.pxd
